--- a/KernelEdgeDetect/KernelEdgeDetect.csproj
+++ b/KernelEdgeDetect/KernelEdgeDetect.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EdgeDetect.cs" />
+    <Compile Include="Normalization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
